# Rusty-Creator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
plugins/: CMakeLists.txt
plugins/rust/: CMakeLists.txt  Rusty.json.in  buildtargetinfo.h  buildtargettype.h  cratesupport.cpp  cratesupport.h  rsside.cpp  rsside.h  rssidebuildconfiguration.cpp  rssidebuildconfiguration.h  rssideuicextracompiler.cpp  rssideuicextracompiler.h  rusteditor.cpp  rusteditor.h  rustformattoken.h  rusthighlighter.cpp  rusthighlighter.h  rustindenter.cpp  rustindenter.h  rustlanguageclient.cpp  rustlanguageclient.h  rustproject.cpp  rustproject.h  rustrunconfiguration.cpp  rustrunconfiguration.h  rustscanner.cpp  rustscanner.h  rustsettings.cpp  rustsettings.h  rusttr.h  rustutils.cpp  rustutils.h  rustwizardpagefactory.cpp  rustwizardpagefactory.h  rusty.cpp  rusty.h  rusty_global.h  rustyconstants.h
templates/wizards/projects/rustapplication/: main_empty.rs
templates/wizards/projects/rustapplication/empty/: wizard.json
